layout fixes on small screen

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -240,7 +240,7 @@ footer {
   padding: var(--spacer) 0;
 }
 
-.footer-notices .inner {
+.footer-notices .layout-wide {
   text-align: center;
 }
 
